--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.5",
+    "swr": "^0.5.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
