--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -20,9 +19,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-scroll-to-top": "^1.0.5",
-    "swr": "^0.5.6",
-    "web-vitals": "^1.1.1"
+    "react-scroll-to-top": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
