--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestile-react",
-  "homepage": ".",
+  "homepage": "https://gracious-dijkstra-af92d7.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
